--- a/gb/22/9/29/n13835529.md
+++ b/gb/22/9/29/n13835529.md
@@ -2,7 +2,7 @@
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【中国观察】中共极端防疫还能走多远？</h2>
-<a href="https://d1d4q9enzm2lz3.cloudfront.net/R9qBb7KNp"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://d3sh8rhxyvin24.cloudfront.net/X9kBb7KNq"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>2022年5月25日，中国上海静安区COVID-19（中共病毒）疫情封锁期间，一名妇女从一个大院的栅栏向外眺望。(Hector Retamal/AFP via Getty Images)
 </h6>
 <hr>
@@ -21,7 +21,7 @@
 <h2>民怨背后 解封的短浅目标</h2>
 <p>进入9月后，中国多点爆发的新冠病毒疫情仍在扩散，9月29日，官方通报前一天的本土病例分布于15个省。多地处于不同程度的封控状态。因为严酷的疫情封控政策，已激起越来越多的抗议。</p>
 <p>本月下旬，深圳市多地因疫情封控激发民众抗议。其中福田区沙尾村只发现一个确诊病例就封村，26日晚，沙尾村上千民众聚集抗议，要求“解封”，爆发警民冲突。深圳市南岭村的荔枝花园小区27日爆发了抗议，29日，有民众向大纪元记者反映已经解封。<br />
-<a src=""></a><a href="https://d1d4q9enzm2lz3.cloudfront.net/R9qBb7KNp"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/embed/8bfff422-18c4-4004-bdf1-a9a60a5b77c5?r=16x9&amp;d=45" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></p>
+<a src=""></a><a href="https://d3sh8rhxyvin24.cloudfront.net/X9kBb7KNq"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/embed/8bfff422-18c4-4004-bdf1-a9a60a5b77c5?r=16x9&amp;d=45" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></p>
 <p>此前，9月25日，新疆乌鲁木齐王家梁已封控近50天，大批民众冲上街头抗议。在舆论压力下，当局宣布解封。</p>
 <p>一些网民质疑：为什么香港可以开放，大陆还坚持清零？但即便在大陆发生抗议的城市，似乎也有普通民众对大陆结束清零没有太多的要求。</p>
 <p>深圳福田沙尾西村一名打工者晓明（化名）9月29日对大纪元记者说，抗议激烈就是大家觉得防疫过度了，而且之前说好的一些补贴有很多人没拿到。他说对香港放开防疫，大家没太大的感知，只关心自己什么时候可以解封。</p>
@@ -77,31 +77,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/26/n9894907.md#1" target="_blank">毛时代的诗坛乱象</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/2/n11494502.md#1" target="_blank">探寻东方养生道 希腊青年在修炼中得到升华</a></li><hr>
+<li><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/11/n9947822.md#1" target="_blank">文革中自杀的几个名人（2）文联主席老舍</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/5/n11769925.md#1" target="_blank">见证大法超常 屏东法轮功学员在法中熔炼</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13950568.md#1">明末改朝换代关帝君显灵  天命不可违人算不如天算</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951783.md#1">挣脱监控 新西兰中领馆出逃员工心路历程</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/18/n13952758.md#1">【未解之谜】别找了 外星人早来地球了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13949868.md#1">【古道人生】古代一些被权贵家庭看不起的穷女婿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13950328.md#1">【未解之谜】消失的《小人国》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954705.md#1">【热点互动】习普会 北京再批美国民主</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954366.md#1">【中国禁闻】中国现同时感染两种毒株患者 专家解读</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954365.md#1">【全球新闻】协议达成 瑞士银行将收购瑞士信贷</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/18/n13953298.md#1">中国女篮国手被曝当小三 多次发照片诱惑领队</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/17/n13952121.md#1">Costco退货政策最慷慨 但11类商品不能退</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/18/n13952900.md#1">F-35战机有三大优势 歼-20和苏-57望尘莫及</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/18/n13953323.md#1">大陆配音圈大地震 姜广涛等4人被爆涉刑事犯罪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/19/n13953953.md#1">御用配音员姜广涛被捕 刘恺威近十年作品恐下架</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/19/n13953394.md#1">帮坤达庆生 被喊艺界扶龙王 柯佳嬿幽默回应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/19/n13953476.md#1">草蜢隔13年登台开唱 张小燕与2位歌王都到场</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954264.md#1">李多海与SE7EN官宣结婚 5月举办婚礼</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13950837.md#1">年龄大听力一定差？6类护耳食物要多吃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/19/n13953544.md#1">父母如何让小孩听从指令？ 专家分享三招</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/7/n13944686.md#1">洗蔬果简单又好用的方法 让你不再吃进农药</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13944006.md#1">穿出职场业务力 改变穿搭好运随之而来</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/17/n13952244.md#1">组图：台湾最美最长的黄金、翠绿双隧道</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963438.md#1">【时事人物】从任性少年到ChatGPT新乌托邦教主</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962992.md#1">【车评】橙黄之色 2023 Toyota Tacoma TRD Pro</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963361.md#1">【时事金扫描】川普被起诉牵涉大 解读混乱局势</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962933.md#1">分析：养儿防老被中共破坏 老人何去何从</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963429.md#1">9岁时曾遭绑架 张艾嘉儿子首次吐露心声</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962591.md#1">常服安眠药痴呆风险增8成  专家荐“神奇助眠剂”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/9/29/n13835529.htm">【中国观察】中共极端防疫还能走多远？</a></p><hr>
